--- a/datos/Ejercicio03/Dockerfile
+++ b/datos/Ejercicio03/Dockerfile
@@ -4,8 +4,12 @@ FROM nginx:latest
 # Copia tu configuración personalizada de NGINX al contenedor
 COPY nginx.conf /etc/nginx/nginx.conf
 
+# Copiar el nuevo archivo HTML
+COPY html/index.html /usr/share/nginx/html/index.html
+
 # Expone el puerto 80 para que pueda ser accesible desde fuera del contenedor
 EXPOSE 80
 
 # Comando para iniciar NGINX cuando se ejecute el contenedor
 CMD ["nginx", "-g", "daemon off;"]
+
